tests/NormalTests/paczka1/small_fuzzy/74810292.err
Error in line 2: GvXfwFLbH A195 52,9
Error in line 4: GvXfwFLbH A491 69,6
Error in line 10: qxuPCXH A916 70,9
